<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://w3.org/2001/XMLSchema"?>
<package format="2">
  <name>refrain_velodyne_sample</name>
  <version>0.0.0</version>
  <description>Velodyne plugin sample for Gazebosim</description>
  <maintainer email="errcsool@engineer.com">Eric Solomon</maintainer>
  <license>MIT License</license>
  <author>Eric Solomon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

